--- a/views/partials/body/input.ejs
+++ b/views/partials/body/input.ejs
@@ -27,7 +27,7 @@
 
 <i class=" fa fa-long-arrow-right"></i>
 <script>
-var socket = io.connect("http://localhost");
+var socket = io.connect("http://52.78.82.199:80");
 var test1 =false;
   function stsubmit1() {
       socket.emit('std1');
@@ -69,7 +69,7 @@ var test1 =false;
     </div>
     </h5>
   <script>
-  var socket = io.connect("http://localhost");
+  var socket = io.connect("http://52.78.82.199:80");
     //var dao = "<%=data_1.range001%>"
   socket.on('email1',function () {
       socket.emit('standardData');
@@ -96,7 +96,7 @@ var test1 =false;
     <input type ="button"  id="ruleid2" name="ruleid2" value="적용" onclick="stsubmit2()"/>
     <i class=" fa fa-long-arrow-right"></i>
     <script>
-    var socket = io.connect("http://localhost");
+    var socket = io.connect("http://52.78.82.199:80");
     var test2 =false;
     function stsubmit2() {
       socket.emit('std2');
@@ -135,7 +135,7 @@ var test1 =false;
         </div>
         </h5>
         <script>
-        var socket = io.connect("http://localhost");
+        var socket = io.connect("http://52.78.82.199:80");
           //var dao = "<%=data_1.range001%>"
           socket.on('email2',function () {
               socket.emit('standardData');
@@ -160,7 +160,7 @@ var test1 =false;
       <input type ="button" id="ruleid3" name="ruleid3" value="적용" onclick="stsubmit3()"/>
       <i class=" fa fa-long-arrow-right"></i>
       <script>
-      var socket = io.connect("http://localhost");
+      var socket = io.connect("http://52.78.82.199:80");
       var test3=false;
       function stsubmit3() {
         socket.emit('std3');
@@ -199,7 +199,7 @@ var test1 =false;
           </div>
           </h5>
           <script>
-          var socket = io.connect("http://localhost");
+          var socket = io.connect("http://52.78.82.199:80");
             //var dao = "<%=data_1.range001%>"
             socket.on('email3',function () {
                 socket.emit('standardData');
@@ -225,7 +225,7 @@ var test1 =false;
       <input type ="button"  id="ruleid4" name="ruleid4" value="적용" onclick="stsubmit4()"/>
       <i class=" fa fa-long-arrow-right"></i>
       <script>
-      var socket = io.connect("http://localhost");
+      var socket = io.connect("http://52.78.82.199:80");
       var test4 =false;
       function stsubmit4() {
         socket.emit('std4');
@@ -264,7 +264,7 @@ var test1 =false;
           </div>
           </h5>
           <script>
-          var socket = io.connect("http://localhost");
+          var socket = io.connect("http://52.78.82.199:80");
             //var dao = "<%=data_1.range001%>"
             socket.on('email4',function () {
                 socket.emit('standaradData');
@@ -289,7 +289,7 @@ var test1 =false;
         <input type ="button"  id="ruleid5" name="ruleid5" value="적용" onclick="stsubmit5()"/>
         <i class=" fa fa-long-arrow-right"></i>
         <script>
-        var socket = io.connect("http://localhost");
+        var socket = io.connect("http://52.78.82.199:80");
         var test5 =false;
         function stsubmit5() {
           socket.emit('std5');
@@ -328,7 +328,7 @@ var test1 =false;
             </div>
             </h5>
             <script>
-            var socket = io.connect("http://localhost");
+            var socket = io.connect("http://52.78.82.199:80");
               //var dao = "<%=data_1.range001%>"
               socket.on('email5',function () {
                   socket.emit('standardData');
