--- a/views/partials/body/graph-1.ejs
+++ b/views/partials/body/graph-1.ejs
@@ -265,23 +265,14 @@ console.log(recieveArray);
             if(config1.data.labels.length==21){
               config1.data.labels.shift(0,21);
               config1.data.datasets[0].data.shift(0,20);
-              //config1.data.datasets[1].data.shift(0,20);
-              //config1.data.datasets[2].data.shift(0,20);
-              //config1.data.datasets[3].data.shift(0,20);
-              //config1.data.datasets[4].data.shift(0,20);
-              config1.data.datasets[0].data.push(parsingdata[0]);
-              //config1.data.datasets[1].data.push(parsingdata[1]-settingdata2);
-              //config1.data.datasets[2].data.push(parsingdata[2]-settingdata3);
-              //config1.data.datasets[3].data.push(parsingdata[3]-settingdata4);
-              //config1.data.datasets[4].data.push(parsingdata[4]-settingdata5);
+              
+              config1.data.datasets[0].data.push(parsingdata[0]-settingdata1);
+              
 
             }
             else{
-              config1.data.datasets[0].data.push(parsingdata[0]);
-              //config1.data.datasets[1].data.push(parsingdata[1]-settingdata2);
-              //config1.data.datasets[2].data.push(parsingdata[2]-settingdata3);
-              //config1.data.datasets[3].data.push(parsingdata[3]-settingdata4);
-              //config1.data.datasets[4].data.push(parsingdata[4]-settingdata5);
+              config1.data.datasets[0].data.push(parsingdata[0]-settingdata1);
+          
 
           }
             window.myLine1.update();
@@ -297,24 +288,13 @@ console.log(recieveArray);
                   if(config2.data.labels.length==21){
                     config2.data.labels.shift(0,21);
                     config2.data.datasets[0].data.shift(0,20);
-                    //config2.data.datasets[1].data.shift(0,20);
-                    //config1.data.datasets[2].data.shift(0,20);
-                    //config1.data.datasets[3].data.shift(0,20);
-                    //config1.data.datasets[4].data.shift(0,20);
-                    config2.data.datasets[0].data.push(parsingdata[1]);
-                    //config1.data.datasets[1].data.push(parsingdata[1]-settingdata2);
-                    //config1.data.datasets[2].data.push(parsingdata[2]-settingdata3);
-                    //config1.data.datasets[3].data.push(parsingdata[3]-settingdata4);
-                    //config1.data.datasets[4].data.push(parsingdata[4]-settingdata5);
+                
+                    config2.data.datasets[0].data.push(parsingdata[1]-settingdata2);
 
                   }
                   else{
-                    config2.data.datasets[0].data.push(parsingdata[1]);
-                    //config1.data.datasets[1].data.push(parsingdata[1]-settingdata2);
-                    //config1.data.datasets[2].data.push(parsingdata[2]-settingdata3);
-                    //config1.data.datasets[3].data.push(parsingdata[3]-settingdata4);
-                    //config1.data.datasets[4].data.push(parsingdata[4]-settingdata5);
-
+                    config2.data.datasets[0].data.push(parsingdata[1]-settingdata2);
+                    
                 }
                   window.myLine2.update();
               }
